--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require": {
         "php": ">=5.5.9",
         "symfony/framework-bundle": "~2.8|~3.0",
-        "incolab/core-bundle": "dev-master"
+        "incolab/core-bundle": "0.1.0"
     },
     "autoload": {
         "psr-4": { "Incolab\\ForumBundle\\": "" }
