--- a/Resources/config/doctrine/Post.orm.yml
+++ b/Resources/config/doctrine/Post.orm.yml
@@ -23,6 +23,8 @@ Incolab\ForumBundle\Entity\Post:
             targetEntity: Incolab\ForumBundle\Entity\Topic
             cascade: ["persist"]
             inversedBy: replies
+            joinColumn:
+                onDelete: CASCADE
         author:
             targetEntity: UserBundle\Entity\User
             
