add delete post and fix issues from DQL partial

--- a/Resources/config/doctrine/Topic.orm.yml
+++ b/Resources/config/doctrine/Topic.orm.yml
@@ -38,6 +38,8 @@ Incolab\ForumBundle\Entity\Topic:
         lastPost:
             targetEntity: Incolab\ForumBundle\Entity\Post
             cascade: ["persist"]
+            joinColumn:
+                onDelete: SET NULL
     oneToMany:
         replies:
             targetEntity: Incolab\ForumBundle\Entity\Post
