--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -3,19 +3,18 @@ services:
         class: Incolab\ForumBundle\Model\CategoryManager
         arguments:
             Transliterator: "@incolab_core.transliterator"
-            entityManager: "@doctrine.orm.entity_manager"
+            entityManager: "@db"
             
     incolab_forum.topic_manager:
         class: Incolab\ForumBundle\Model\TopicManager
         arguments:
             Transliterator: "@incolab_core.transliterator"
-            entityManager: "@doctrine.orm.entity_manager"
+            entityManager: "@db"
             
     incolab_forum.post_manager:
         class: Incolab\ForumBundle\Model\PostManager
         arguments:
-            entityManager: "@doctrine.orm.entity_manager"
-            
+            entityManager: "@db"
 #    incolab_forum.example:
 #        class: Incolab\ForumBundle\Example
 #        arguments: ["@service_id", "plain_value", %parameter%]
