push of the death (Listeners, rework shema db, some fixes, etc)

--- a/Resources/config/routing/admin.yml
+++ b/Resources/config/routing/admin.yml
@@ -29,6 +29,12 @@ incolab_forum_admin_child_category_modify:
         slug: "[A-z0-9_-]+"
 #  methods: [POST]
 
+incolab_forum_admin_category_delete:
+    path: /categories/delete/{slugCat}
+    defaults: { _controller: IncolabForumBundle:Admin:categoryDelete }
+    requirements:
+        slugCat: "[A-z0-9_-]+"
+
 #Topics
 incolab_forum_admin_topic_delete:
     path: /categories/{slugParentCat}/{slugCat}/delete/{slugTopic}
