--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -2,19 +2,19 @@ services:
     incolab_forum.category_manager:
         class: Incolab\ForumBundle\Model\CategoryManager
         arguments:
-            Transliterator: "@incolab_core.transliterator"
-            entityManager: "@db"
+            $transliterator: "@incolab_core.transliterator"
+            $database: "@db"
             
     incolab_forum.topic_manager:
         class: Incolab\ForumBundle\Model\TopicManager
         arguments:
-            Transliterator: "@incolab_core.transliterator"
-            entityManager: "@db"
+            $transliterator: "@incolab_core.transliterator"
+            $database: "@db"
             
     incolab_forum.post_manager:
         class: Incolab\ForumBundle\Model\PostManager
         arguments:
-            entityManager: "@db"
+            $database: "@db"
 #    incolab_forum.example:
 #        class: Incolab\ForumBundle\Example
 #        arguments: ["@service_id", "plain_value", %parameter%]
